[workspace]
resolver = "2"

members = ["crates/*"]

# these patches come from the root workspace Cargo.toml [patch.crates-io] of the namada repo
[patch.crates-io]
borsh = { git = "https://github.com/heliaxdev/borsh-rs.git", rev = "cd5223e5103c4f139e0c54cf8259b7ec5ec4073a" }
borsh-derive = { git = "https://github.com/heliaxdev/borsh-rs.git", rev = "cd5223e5103c4f139e0c54cf8259b7ec5ec4073a" }
borsh-derive-internal = { git = "https://github.com/heliaxdev/borsh-rs.git", rev = "cd5223e5103c4f139e0c54cf8259b7ec5ec4073a" }
borsh-schema-derive-internal = { git = "https://github.com/heliaxdev/borsh-rs.git", rev = "cd5223e5103c4f139e0c54cf8259b7ec5ec4073a" }

# we need to use a different URL when patching crates from git sources - see https://github.com/rust-lang/cargo/issues/10756>
[patch."https://github.com/heliaxdev/sparse-merkle-tree"]
# the branch was updated since namada v0.7.1 was released, this patches it back to a commit that works
sparse-merkle-tree = { git = "https://github.com/heliaxdev/sparse-merkle-tree?branch=yuji/prost-0.9", rev = "be4b2293558361df2f452c60a3e90c6b5e52e225" }
