[package]
name = "ethereum_bridge"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.3"
eyre = "0.6.8"
hyper = { version = "0.14.20", features = ["full"] }
namada = { git = "https://github.com/anoma/namada?branch=eth-bridge-integration", rev = "da7f527a672a931108175514cc389476d3eb1916", features = [
    "rand",
] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
