[package]
name = "test_runner"
version = "0.2.0-dev"
edition = "2021"

[lib]
name = "test_runner"
path = "src/lib/mod.rs"

[dependencies]
namada = {git = "https://github.com/anoma/namada", rev = "f3a87098fbba9d8708f08b5ddec403945b555ea2", features = ["rand"]}
borsh = "0.9.0"
rand = "0.8"
tempfile = "3.3.0"
eyre = "0.6.8"
hex = "0.4.3"
retry = "1.3.1"
fs_extra = "1.2.0"
