[package]
name = "test_runner"
version = "0.2.0-dev"
edition = "2021"

[lib]
name = "test_runner"
path = "src/lib/mod.rs"

[dependencies]
namada_core = { git = "https://github.com/anoma/namada", tag = "v0.11.0", features = [
    "rand",
] }
borsh = "0.9.0"
rand = "0.8"
tempfile = "3.3.0"
eyre = "0.6.8"
hex = "0.4.3"
retry = "1.3.1"
fs_extra = "1.2.0"
regex = "1.5.4"
